--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "dashboard",
       "path": "",
       "files": {
+        "65003984": {
+          "id": "65003984",
+          "path": "your-candidates.html",
+          "output": "your-candidates.html",
+          "name": "your-candidates.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "d2eed836": {
           "id": "d2eed836",
           "path": "dashboard-job-seeker.html",
@@ -25,17 +36,6 @@
           "path": "dashboard.html",
           "output": "dashboard.html",
           "name": "dashboard.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "616550cc": {
-          "id": "616550cc",
-          "path": "job-posting.html",
-          "output": "job-posting.html",
-          "name": "job-posting.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
@@ -212,6 +212,66 @@
           "path": "temp.html",
           "output": "temp.html",
           "name": "temp.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "af74a5ae": {
+          "id": "af74a5ae",
+          "path": "create-job.html",
+          "output": "create-job.html",
+          "name": "create-job.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cdd55109": {
+          "id": "cdd55109",
+          "path": "current-open-jobs.html",
+          "output": "current-open-jobs.html",
+          "name": "current-open-jobs.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6b9cbcc4": {
+          "id": "6b9cbcc4",
+          "path": "header.html",
+          "output": "header.html",
+          "name": "header.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "327d8c24": {
+          "id": "327d8c24",
+          "path": "css/style (Subin Park's conflicted copy 2014-11-26).css",
+          "output": "css/style (Subin Park's conflicted copy 2014-11-26)-dist.css",
+          "name": "style (Subin Park's conflicted copy 2014-11-26).css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "074570d5": {
+          "id": "074570d5",
+          "path": "applied-jobs.html",
+          "output": "applied-jobs.html",
+          "name": "applied-jobs.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
